samples/deep-validation/scripts/negative/return-type.ts
export function invalid(): int32 {
    return "wrong";
}
